[project]
name = "failure-analysis-server"
version = "0.1.0"
description = "MCP Failure Analysis Server - Analyzes WebdriverIO test failures using local LLMs"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ollama>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
